# rusted-claude-meter

./: .dupes-ignore.toml  .npmrc  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml  deny.toml  index.html  justfile  package-lock.json  package.json
.github/: dependabot.yml
.github/actions/tauri-linux-deps/: action.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
Casks/: rusted-claude-meter-lite.rb.tmpl  rusted-claude-meter.rb.tmpl
crates/meter-api/: Cargo.toml
crates/meter-api/src/: client.rs  error.rs  headers.rs  lib.rs  response.rs
crates/meter-api/tests/: decode.rs  mock_server.rs
crates/meter-api/tests/fixtures/: usage_response.json  usage_response_cost.json
crates/meter-core/: Cargo.toml
crates/meter-core/src/: browser.rs  desktop.rs  lib.rs  mode.rs  notify.rs  pace_signal.rs  pacing.rs  session.rs  snapshot.rs  spend.rs  status.rs  window.rs
crates/meter-render/: Cargo.toml
crates/meter-render/src/: battery.rs  cache.rs  circular.rs  dual_bar.rs  font.rs  gauge.rs  lib.rs  minimal.rs  palette.rs  render.rs  segments.rs  state.rs  svg.rs
crates/meter-render/tests/: snapshot.rs
docs/: linux-install.md  packaging.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
scripts/: check-file-sizes.sh  install.sh  render-cask.sh
scripts/hooks/: pre-commit
src/: browser-import-render.ts  browser-import.test.ts  browser-import.ts  cost-view-model.test.ts  cost-view-model.ts  demo.test.ts  demo.ts  format.test.ts  format.ts  icon-style-picker.ts  ipc.test.ts  ipc.ts  main.ts  pacing.test.ts  pacing.ts  popover-view.ts  render.ts  settings-render.ts  settings-view-model.test.ts  settings-view-model.ts  settings-view.ts  status.test.ts  status.ts  styles.css  types.ts  view-model.test.ts  view-model.ts  view-routing.test.ts  view-routing.ts  wizard-view-model.test.ts  wizard-view-model.ts  wizard.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.lite.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  spark-bolt.html
src-tauri/src/: autostart.rs  browser_import.rs  cache.rs  commands.rs  cookie_reader.rs  debug_log.rs  export.rs  io_util.rs  lib.rs  main.rs  notifier.rs  settings.rs  settings_window.rs  store.rs  tray.rs  wizard.rs
src-tauri/src/commands/: debug.rs  mod.rs  pace.rs  popover.rs
src-tauri/src/scheduler/: core.rs  mock_integration.rs  mod.rs  test_support.rs  transport.rs
src-tauri/src/tray/: geometry.rs  mod.rs  model.rs  model_tests.rs  popover.rs
src-tauri/src/tray/model/: mod.rs  spec.rs
src-tauri/src/tray/model/spec/: cost.rs
src-tauri/tests/: capability_scope.rs
