[workspace]
resolver = "2"
members = [
    "crates/meter-core",
    "crates/meter-api",
    "crates/meter-render",
    "src-tauri",
]

[workspace.package]
version = "0.1.1" # x-release-please-version
edition = "2024"
license = "MIT"
authors = ["Matjaz Domen Pecan"]
repository = "https://github.com/mpecan/rusted-claude-meter"
# This is an app, not a set of published libraries — none of the workspace
# crates are meant to go to crates.io. Marking them unpublished lets
# cargo-deny's `allow-wildcard-paths` treat their unversioned path
# dependencies on one another as intentional rather than a publish hazard.
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jiff = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
] }

# Dev dependencies
pretty_assertions = "1"
tempfile = "3"
tokio = { version = "1", default-features = false }
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
