[package]
name = "rusted-claude-meter"
description = "Claude plan usage meter in your tray — Tauri port of ClaudeMeter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix avoids a name collision with the binary on Windows,
# see https://github.com/rust-lang/cargo/issues/8519
name = "rusted_claude_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
meter-core = { path = "../crates/meter-core" }
meter-api = { path = "../crates/meter-api" }
meter-render = { path = "../crates/meter-render" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jiff = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
keyring-core = "1"
rookie = "0.5"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }
# Native NSPopover for the menu-bar pop-down (macOS only; Linux keeps the tray
# menu). Git-only crate, pinned to the commit that dropped its forked
# `tray-icon` (which would collide with tauri's `tray-icon` feature). Source is
# allow-listed in `deny.toml`.
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", rev = "b571e0e665da7016d967bbf027b92951ac88f78e" }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "test-util"] }
wiremock = { workspace = true }

[lints]
workspace = true
