[package]
name = "meter-api"
description = "claude.ai usage API client: authentication headers, response decoding, snapshot mapping"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
meter-core = { path = "../meter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jiff = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"

[lints]
workspace = true
