[package]
name = "meter-core"
description = "Domain model for Claude plan usage: limits, scoped models, status and pacing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
