[package]
name = "meter-render"
description = "Tray gauge renderer: usage state → RGBA icon, no platform code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
meter-core = { path = "../meter-core" }
jiff = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# `text` pulls in usvg's font stack (fontdb + rustybuzz) so `<text>` renders.
# We deliberately omit `system-fonts`/`memmap-fonts`: the only font is the
# bundled Roboto Mono subset loaded via `load_font_data`, which keeps rendering
# deterministic (no machine-dependent system fonts) for the snapshot tests.
resvg = { version = "0.47", default-features = false, features = ["text"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
png = "0.18"

[lints]
workspace = true
